[package]
name = "drone"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
rand = "0.8.5"
rodio = { version = "0.20.1", optional = true }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" }

[dev-dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }

[features]
sounds = ["dep:rodio"]

[[example]]
name = "crash"
path = "examples/crash/crash.rs"
required-features = ["sounds"]
